<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TambahDataActivity">

    <TextView
        android:id="@+id/tv_nim_mahasiswa"
        android:text="@string/nim_mahasiswa"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_nim_mahasiswa"
        android:hint="@string/masukkan_nim_mahasiswa"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_nama_mahasiswa"
        android:text="@string/nama_mahasiswa"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_nama_mahasiswa"
        android:hint="@string/masukkan_nama_mahasiswa"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_tgl_lahir_mahasiswa"
        android:text="@string/tanggal_lahir"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_tanggal_lahir_mahasiswa"
        android:layout_margin="16dp"
        android:hint="@string/masukkan_tanggal_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_jenis_kelamin_mahasiswa"
        android:text="@string/jenis_kelamin"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_jenis_kelamin_mahasiswa"
        android:hint="@string/pilih_jenis_kelamin"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tx_alamat_mahasiswa"
        android:text="@string/alamat"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_alamat_mahasiswa"
        android:hint="@string/masukkan_alamat"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_simpan"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>